anasayfa tasarımı iyileştirildi ve derleme hataları düzeltildi